Test: Commit/Doc 생성 Saga 실패 시나리오 및 통합/단위 테스트 보강