@@ -2,49 +2,37 @@ package io.ejangs.docsa.domain.commit.app;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import io.ejangs.docsa.domain.block.app.BlockService;
-import io.ejangs.docsa.domain.block.document.Block;
 import io.ejangs.docsa.domain.branch.app.BranchService;
 import io.ejangs.docsa.domain.branch.entity.Branch;
 import io.ejangs.docsa.domain.commit.dao.mongodb.CommitBlockSequenceRepository;
 import io.ejangs.docsa.domain.commit.dao.mysql.CommitRepository;
-import io.ejangs.docsa.domain.commit.document.CommitBlockSequence;
 import io.ejangs.docsa.domain.commit.dto.request.CreateCommitRequest;
-import io.ejangs.docsa.domain.commit.dto.response.CreateCommitResponse;
 import io.ejangs.docsa.domain.commit.entity.Commit;
-import io.ejangs.docsa.domain.commit.util.CommitBlockSequenceMapper;
-import io.ejangs.docsa.domain.commit.util.CommitMapper;
 import io.ejangs.docsa.domain.commit.util.CommitMockTestUtils;
 import io.ejangs.docsa.domain.doc.app.DocQueryService;
-import io.ejangs.docsa.domain.doc.app.DocService;
 import io.ejangs.docsa.domain.doc.app.EdgeService;
 import io.ejangs.docsa.domain.doc.entity.Doc;
-import io.ejangs.docsa.domain.doc.entity.Edge;
 import io.ejangs.docsa.domain.save.app.SaveService;
 import io.ejangs.docsa.domain.user.entity.User;
 import io.ejangs.docsa.domain.user.security.CustomUserDetails;
 import io.ejangs.docsa.global.exception.CustomException;
 import io.ejangs.docsa.global.exception.errorcode.BlockSequenceErrorCode;
-import io.ejangs.docsa.global.exception.errorcode.CommitErrorCode;
-import io.ejangs.docsa.global.exception.errorcode.DatabaseErrorCode;
-import java.util.List;
+import io.ejangs.docsa.global.mongo.deletion.util.MongoIdsCollector;
 import java.util.Optional;
+import java.util.Collections;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.ApplicationEventPublisher;
 
@@ -64,6 +52,9 @@ class CommitServiceMockTest {
     private BranchService branchService;
 
     @Mock
+    private CommitCreateOrchestrator commitCreateOrchestrator;
+
+    @Mock
     private BlockService blockService;
 
     @Mock
@@ -71,6 +62,12 @@ class CommitServiceMockTest {
 
     @Mock
     private EdgeService edgeService;
+
+    @Mock
+    private CommitContentAssembler assembler;
+
+    @Mock
+    private MongoIdsCollector mongoIdsCollector;
 
     @Mock
     private ApplicationEventPublisher eventPublisher;
@@ -84,13 +81,9 @@ class CommitServiceMockTest {
     private User user;
     private Doc doc;
     private Branch branch;
-    private Commit baseCommit;
-    private List<Block> savedBlocks;
-    private List<Block> baseCommitBlocks;
-    private CommitBlockSequence savedCbs;
-    private Commit savedCommit;
-    private CreateCommitResponse expectedResponse;
-    private Edge edge;
+    private Commit leafCommit;
+    private Commit fromCommit;
+    private Commit createdCommit;
     private CustomUserDetails userDetails;
 
     @BeforeEach
@@ -98,263 +91,140 @@ class CommitServiceMockTest {
         docId = 1L;
         branchId = 1L;
 
-        // CreateCommitRequest 생성
         createCommitRequest = new CreateCommitRequest(
-                "Test commit message",
+                "Test commit",
                 "",
-                1L,
-                List.of(CommitMockTestUtils.createBlockRequest("block1"),
-                        CommitMockTestUtils.createBlockRequest("block2")),
-                List.of("block1", "block2")
+                branchId,
+                Collections.emptyList(),
+                Collections.emptyList()
         );
 
-        // User 생성
         user = CommitMockTestUtils.createUser();
         userDetails = CustomUserDetails.from(user);
-
-        // Doc 생성
         doc = CommitMockTestUtils.createDoc(user);
 
-        // Branch 생성
-        branch = CommitMockTestUtils.createBranch(doc, baseCommit);
-
-        // Base commit 생성
-        baseCommit = CommitMockTestUtils.createBaseCommit(branch);
-        baseCommit.setBranch(branch);
-
-        // Blocks 생성
-        savedBlocks = List.of(
-                CommitMockTestUtils.createBlock("block1"),
-                CommitMockTestUtils.createBlock("block2")
-        );
-
-        baseCommitBlocks = List.of(
-                CommitMockTestUtils.createBlock("baseBlock1")
-        );
-
-        // CommitBlockSequence 생성
-        savedCbs = CommitMockTestUtils.createCommitBlockSequence();
-
-        // Commit 생성
-        savedCommit = CommitMockTestUtils.createMockCommit(branch, 2L);
-
-        // Expected response 생성
-        expectedResponse = new CreateCommitResponse(1L);
-
-        // edge 생성
-        edge = CommitMockTestUtils.createEdge(doc, baseCommit, savedCommit);
+        branch = org.mockito.Mockito.mock(Branch.class);
+        leafCommit = org.mockito.Mockito.mock(Commit.class);
+        fromCommit = org.mockito.Mockito.mock(Commit.class);
+        createdCommit = org.mockito.Mockito.mock(Commit.class);
     }
 
-
     @Test
-    @DisplayName("커밋 생성 성공 - 기본")
-    void createCommit_Success() {
-        // Given
+    @DisplayName("커밋 생성 성공 - leafCommit 기반으로 오케스트레이터 호출")
+    void createCommit_success_withLeafCommit() {
         when(docQueryService.getById(docId)).thenReturn(doc);
         when(branchService.getById(branchId)).thenReturn(branch);
-        when(blockService.saveBlocks(any())).thenReturn(savedBlocks);
-        lenient().when(cbsRepository.findById(baseCommit.getCommitMongoId())).thenReturn(
-                Optional.of(CommitMockTestUtils.createCommitBlockSequence()));
+        when(branch.getLeafCommit()).thenReturn(leafCommit);
+        when(leafCommit.getId()).thenReturn(11L);
+        when(leafCommit.getCommitMongoId()).thenReturn("leaf-cbs-id");
+        when(commitRepository.findById(11L)).thenReturn(Optional.of(leafCommit));
+        when(createdCommit.getId()).thenReturn(101L);
+        when(commitCreateOrchestrator.create(createCommitRequest, "leaf-cbs-id", doc, branch))
+                .thenReturn(createdCommit);
 
-        try (MockedStatic<CommitBlockSequenceMapper> cbsMapperMock = mockStatic(
-                CommitBlockSequenceMapper.class);
-                MockedStatic<CommitMapper> commitMapperMock = mockStatic(CommitMapper.class)) {
+        var result = commitService.createCommit(docId, createCommitRequest, userDetails.getId());
 
-            when(CommitBlockSequenceMapper.toEntity(anyList())).thenReturn(savedCbs);
-            when(cbsRepository.save(savedCbs)).thenReturn(savedCbs);
-            when(CommitMapper.toEntity(branch, createCommitRequest)).thenReturn(
-                    savedCommit);
-            when(commitRepository.save(savedCommit)).thenReturn(savedCommit);
-            when(CommitMapper.toCreateCommitResponse(savedCommit)).thenReturn(expectedResponse);
+        assertThat(result.id()).isEqualTo(101L);
+        verify(branchService).checkBranchInDocOwnedByUser(docId, branchId, userDetails.getId());
+        verify(commitCreateOrchestrator).create(createCommitRequest, "leaf-cbs-id", doc, branch);
 
-            // When
-            CreateCommitResponse result = commitService.createCommit(docId,
-                    createCommitRequest, userDetails.getId());
-
-            // Then
-            assertThat(result).isEqualTo(expectedResponse);
-
-            verify(docQueryService).getById(docId);
-            verify(branchService).getById(branchId);
-            verify(blockService).saveBlocks(createCommitRequest.blocks());
-            verify(cbsRepository).save(savedCbs);
-            verify(commitRepository).save(savedCommit);
-        }
+        verifyNoInteractions(cbsRepository, blockService, saveService, edgeService);
     }
 
     @Test
-    @DisplayName("커밋 생성 성공 - 기존 Save 삭제")
-    void createCommit_Success_DeleteExistingSave() {
-        // Given
+    @DisplayName("커밋 생성 성공 - leafCommit이 null이면 fromCommit을 base로 사용")
+    void createCommit_success_useFromCommitWhenLeafCommitIsNull() {
         when(docQueryService.getById(docId)).thenReturn(doc);
         when(branchService.getById(branchId)).thenReturn(branch);
-        when(blockService.saveBlocks(any())).thenReturn(savedBlocks);
-        lenient().when(cbsRepository.findById(baseCommit.getCommitMongoId())).thenReturn(
-                Optional.of(CommitMockTestUtils.createCommitBlockSequence()));
+        when(branch.getLeafCommit()).thenReturn(null);
+        when(branch.getFromCommit()).thenReturn(fromCommit);
+        when(fromCommit.getId()).thenReturn(21L);
+        when(fromCommit.getCommitMongoId()).thenReturn("from-cbs-id");
+        when(commitRepository.findById(21L)).thenReturn(Optional.of(fromCommit));
+        when(createdCommit.getId()).thenReturn(101L);
+        when(commitCreateOrchestrator.create(createCommitRequest, "from-cbs-id", doc, branch))
+                .thenReturn(createdCommit);
 
-        try (MockedStatic<CommitBlockSequenceMapper> cbsMapperMock = mockStatic(
-                CommitBlockSequenceMapper.class);
-                MockedStatic<CommitMapper> commitMapperMock = mockStatic(CommitMapper.class)) {
+        var result = commitService.createCommit(docId, createCommitRequest, userDetails.getId());
 
-            when(CommitBlockSequenceMapper.toEntity(anyList())).thenReturn(savedCbs);
-            when(cbsRepository.save(savedCbs)).thenReturn(savedCbs);
-            when(CommitMapper.toEntity(branch, createCommitRequest)).thenReturn(
-                    savedCommit);
-            when(commitRepository.save(savedCommit)).thenReturn(savedCommit);
-            when(CommitMapper.toCreateCommitResponse(savedCommit)).thenReturn(expectedResponse);
-
-            // When
-            CreateCommitResponse result = commitService.createCommit(docId,
-                    createCommitRequest, userDetails.getId());
-
-            // Then
-            assertThat(result).isEqualTo(expectedResponse);
-            verify(saveService).deleteSaveIfExists(branch);
-        }
+        assertThat(result.id()).isEqualTo(101L);
+        verify(commitCreateOrchestrator).create(createCommitRequest, "from-cbs-id", doc, branch);
     }
 
     @Test
-    @DisplayName("커밋 생성 성공 - leafCommit이 null인 경우 fromCommit 사용")
-    void createCommit_Success_UseFromCommitWhenLeafCommitIsNull() {
-        // Given
-        Branch branchWithoutLeafCommit = CommitMockTestUtils.createBranch(doc, baseCommit);
-        branchWithoutLeafCommit.updateLeafCommit(null); // leafCommit을 null로 설정
-
+    @DisplayName("커밋 생성 성공 - 최초 커밋이면 baseCommitCbsMongoId는 null")
+    void createCommit_success_initialCommit_baseIsNull() {
         when(docQueryService.getById(docId)).thenReturn(doc);
-        when(branchService.getById(branchId)).thenReturn(branchWithoutLeafCommit);
-        when(blockService.saveBlocks(any())).thenReturn(savedBlocks);
-        when(cbsRepository.findById(
-                branchWithoutLeafCommit.getFromCommit().getCommitMongoId())).thenReturn(
-                Optional.of(CommitMockTestUtils.createCommitBlockSequence()));
+        when(branchService.getById(branchId)).thenReturn(branch);
+        when(branch.getLeafCommit()).thenReturn(null);
+        when(branch.getFromCommit()).thenReturn(null);
+        when(createdCommit.getId()).thenReturn(101L);
+        when(commitCreateOrchestrator.create(createCommitRequest, null, doc, branch))
+                .thenReturn(createdCommit);
 
-        try (MockedStatic<CommitBlockSequenceMapper> cbsMapperMock = mockStatic(
-                CommitBlockSequenceMapper.class);
-                MockedStatic<CommitMapper> commitMapperMock = mockStatic(CommitMapper.class)) {
+        var result = commitService.createCommit(docId, createCommitRequest, userDetails.getId());
 
-            when(CommitBlockSequenceMapper.toEntity(anyList())).thenReturn(savedCbs);
-            when(cbsRepository.save(savedCbs)).thenReturn(savedCbs);
-            when(CommitMapper.toEntity(branchWithoutLeafCommit, createCommitRequest)).thenReturn(
-                    savedCommit);
-            when(commitRepository.save(savedCommit)).thenReturn(savedCommit);
-            when(CommitMapper.toCreateCommitResponse(savedCommit)).thenReturn(expectedResponse);
-
-            // When
-            CreateCommitResponse result = commitService.createCommit(docId,
-                    createCommitRequest, userDetails.getId());
-
-            // Then
-            assertThat(result).isEqualTo(expectedResponse);
-            verify(cbsRepository).findById(
-                    branchWithoutLeafCommit.getFromCommit().getCommitMongoId());
-        }
+        assertThat(result.id()).isEqualTo(101L);
+        verify(commitCreateOrchestrator).create(createCommitRequest, null, doc, branch);
     }
 
     @Test
-    @DisplayName("커밋 생성 실패 - 문서 검증 실패")
-    void createCommit_Fail_DocNotFound() {
-        // Given
+    @DisplayName("커밋 생성 실패 - 브랜치 권한 검증 실패 시 오케스트레이터 미호출")
+    void createCommit_fail_branchOwnershipCheck() {
         doThrow(new CustomException(BlockSequenceErrorCode.BLOCK_SEQUENCE_NOT_FOUND))
-                .when(docQueryService).getById(docId);
+                .when(branchService).checkBranchInDocOwnedByUser(docId, branchId, userDetails.getId());
 
-        // When & Then
-        assertThatThrownBy(() -> commitService.createCommit(docId, createCommitRequest,
-                userDetails.getId()))
+        assertThatThrownBy(() -> commitService.createCommit(docId, createCommitRequest, userDetails.getId()))
                 .isInstanceOf(CustomException.class);
 
-        verify(docQueryService).getById(docId);
-        verify(branchService, never()).getById(any());
-        verify(blockService, never()).saveBlocks(any());
+        verify(docQueryService, never()).getById(docId);
+        verify(branchService, never()).getById(branchId);
+        verifyNoInteractions(commitCreateOrchestrator);
     }
 
     @Test
-    @DisplayName("커밋 생성 실패 - 블록 저장 실패시")
-    void createCommit_Fail_BlockSaveFails_ShouldRollback() {
-        // Given
+    @DisplayName("커밋 생성 실패 - 브랜치 조회 실패 시 오케스트레이터 미호출")
+    void createCommit_fail_whenBranchLookupFails() {
+        when(docQueryService.getById(docId)).thenReturn(doc);
+        doThrow(new CustomException(BlockSequenceErrorCode.BLOCK_SEQUENCE_NOT_FOUND))
+                .when(branchService).getById(branchId);
+
+        assertThatThrownBy(() -> commitService.createCommit(docId, createCommitRequest, userDetails.getId()))
+                .isInstanceOf(CustomException.class);
+
+        verifyNoInteractions(commitRepository, commitCreateOrchestrator);
+    }
+
+    @Test
+    @DisplayName("커밋 생성 실패 - base commit 조회 중 repository 예외 전파")
+    void createCommit_fail_whenBaseCommitLookupFails() {
         when(docQueryService.getById(docId)).thenReturn(doc);
         when(branchService.getById(branchId)).thenReturn(branch);
-        when(blockService.saveBlocks(any())).thenThrow(new RuntimeException("Block save failed"));
+        when(branch.getLeafCommit()).thenReturn(leafCommit);
+        when(leafCommit.getId()).thenReturn(11L);
+        doThrow(new RuntimeException("repo fail"))
+                .when(commitRepository).findById(11L);
 
-        try (MockedStatic<CommitBlockSequenceMapper> cbsMapperMock = mockStatic(
-                CommitBlockSequenceMapper.class);
-                MockedStatic<CommitMapper> commitMapperMock = mockStatic(CommitMapper.class)) {
+        assertThatThrownBy(() -> commitService.createCommit(docId, createCommitRequest, userDetails.getId()))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("repo fail");
 
-            when(CommitMapper.toEntity(branch, createCommitRequest)).thenReturn(
-                    savedCommit);
-            when(commitRepository.save(savedCommit)).thenReturn(savedCommit);
-
-            // When & Then
-            assertThatThrownBy(() -> commitService.createCommit(docId, createCommitRequest,
-                    userDetails.getId()))
-                    .isInstanceOf(RuntimeException.class)
-                    .hasMessage(DatabaseErrorCode.DATABASE_ERROR.getMessage());
-
-            verify(docQueryService).getById(docId);
-            verify(branchService).getById(branchId);
-            verify(blockService).saveBlocks(createCommitRequest.blocks());
-            verify(cbsRepository, never()).save(any());
-        }
+        verifyNoInteractions(commitCreateOrchestrator);
     }
 
     @Test
-    @DisplayName("커밋 생성 실패 - JPA 저장 실패시 MongoDB 호출 안함")
-    void createCommit_Fail_JpaSaveFails_ShouldRollbackMongoDB() {
-        // Given
+    @DisplayName("커밋 생성 실패 - 오케스트레이터 예외는 그대로 전파")
+    void createCommit_fail_whenOrchestratorThrows() {
         when(docQueryService.getById(docId)).thenReturn(doc);
-        lenient().when(branchService.getById(branchId)).thenReturn(branch);
-        lenient().when(blockService.saveBlocks(any())).thenReturn(savedBlocks);
+        when(branchService.getById(branchId)).thenReturn(branch);
+        when(branch.getLeafCommit()).thenReturn(leafCommit);
+        when(leafCommit.getId()).thenReturn(11L);
+        when(commitRepository.findById(11L)).thenReturn(Optional.of(leafCommit));
+        doThrow(new RuntimeException("orchestrator fail"))
+                .when(commitCreateOrchestrator).create(createCommitRequest, null, doc, branch);
 
-        try (MockedStatic<CommitBlockSequenceMapper> cbsMapperMock = mockStatic(
-                CommitBlockSequenceMapper.class);
-                MockedStatic<CommitMapper> commitMapperMock = mockStatic(CommitMapper.class)) {
-
-            when(CommitBlockSequenceMapper.toEntity(anyList())).thenReturn(savedCbs);
-            when(CommitMapper.toEntity(branch, createCommitRequest)).thenReturn(
-                    savedCommit);
-            when(commitRepository.save(savedCommit)).thenThrow(
-                    new RuntimeException("[Test message] Block save failed"));
-
-            // When & Then
-            assertThatThrownBy(() -> commitService.createCommit(docId, createCommitRequest,
-                    userDetails.getId()))
-                    .isInstanceOf(RuntimeException.class)
-                    .hasMessage("[Test message] Block save failed");
-
-            // MongoDB에 반영 안됨
-            verify(cbsRepository, never()).save(savedCbs);
-        }
-    }
-
-    @Test
-    @DisplayName("커밋 생성 실패 - 잘못된 블록 순서")
-    void createCommit_Fail_InvalidBlockOrder() {
-        // Given
-        CreateCommitRequest invalidRequest = new CreateCommitRequest(
-                "Test commit message",
-                "",
-                1L,
-                List.of(CommitMockTestUtils.createBlockRequest("block1")),
-                List.of("block1", "invalidBlock") // 존재하지 않는 블록
-        );
-        try (MockedStatic<CommitBlockSequenceMapper> cbsMapperMock = mockStatic(
-                CommitBlockSequenceMapper.class);
-                MockedStatic<CommitMapper> commitMapperMock = mockStatic(CommitMapper.class)) {
-
-            when(docQueryService.getById(docId)).thenReturn(doc);
-            when(branchService.getById(branchId)).thenReturn(branch);
-            when(blockService.saveBlocks(any())).thenReturn(savedBlocks);
-            when(CommitMapper.toEntity(branch, invalidRequest)).thenReturn(
-                    savedCommit);
-            when(commitRepository.save(savedCommit)).thenReturn(savedCommit);
-
-            // When & Then
-            assertThatThrownBy(() -> commitService.createCommit(docId, invalidRequest,
-                    userDetails.getId()))
-                    .isInstanceOf(CustomException.class)
-                    .hasMessageContaining(
-                            BlockSequenceErrorCode.BLOCK_SEQUENCE_INVALID.getMessage());
-
-            // MongoDB에 반영 안됨
-            verify(cbsRepository, never()).save(savedCbs);
-        }
+        assertThatThrownBy(() -> commitService.createCommit(docId, createCommitRequest, userDetails.getId()))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("orchestrator fail");
     }
 }
